<resources>
    <string name="app_name">BusinessCard</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="square">Square</string>
    <string name="custom">Custom</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
